chore: stub out deployment stuff

--- a/PiShell/PiShell.csproj
+++ b/PiShell/PiShell.csproj
@@ -53,6 +53,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include=".kamal\hooks\post-deploy" />
+    <None Include=".kamal\hooks\pre-deploy" />
+    <None Include=".kamal\secrets" />
     <None Include="AgentFiles\.gitkeep" />
     <None Include="AgentFiles\AGENTS.md" />
     <None Include="AgentFiles\BOOTSTRAP.md" />
