chore: fix deploy secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,8 @@ on:
     branches: [ master ]
 
 env:
-  MINIMAX_API_KEY: ${{ secrets.KAMAL_REGISTRY_PASSWORD }}
-  OWNER_ID: ${{ secrets.RAILS_MASTER_KEY }}
+  MINIMAX_API_KEY: ${{ secrets.MINIMAX_API_KEY }}
+  OWNER_ID: ${{ secrets.OWNER_ID }}
   DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
 
 jobs:
