fix: copy agent files into home folder

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,4 @@ jobs:
             ${{ secrets.KAMAL_SSH_PRIVATE_KEY }}
 
       - name: Deploy with Kamal
-        run: |
-          kamal app stop
-          kamal deploy
+        run: kamal deploy
