fix: restart the entire pi process when an extension is installed

--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,4 @@ PiCrust/AgentFiles/sessions/**/*
 PiCrust/AgentFiles/memories/**/*
 !PiCrust/AgentFiles/sessions/.keep
 !PiCrust/AgentFiles/memories/.keep
+/PiCrust/AgentFiles/settings.json
