feat: add the ability to specify the model via env

--- a/PiCrust/.env.example
+++ b/PiCrust/.env.example
@@ -19,3 +19,19 @@ PI_CODING_AGENT_DIR=/app/.pi
 
 # Heartbeat interval in minutes
 HEARTBEAT_INTERVAL_MINUTES=30
+
+# pi model configuration (optional)
+# Specify the AI provider and model to use. Supports two formats:
+#
+# Format 1: Separate PI_PROVIDER and PI_MODEL variables
+#   PI_PROVIDER=anthropic
+#   PI_MODEL=claude-sonnet-20241022
+#
+# Format 2: Combined PI_MODEL with "provider/model" syntax
+#   PI_MODEL=anthropic/claude-sonnet-20241022
+#
+# Examples:
+#   PI_PROVIDER=google
+#   PI_MODEL=gemini-2.0-flash-exp
+#   PI_MODEL=anthropic/claude-3-5-sonnet-20241022
+#   PI_MODEL=openai/gpt-4o
