--- a/PiCrust/.env.example
+++ b/PiCrust/.env.example
@@ -35,3 +35,21 @@ HEARTBEAT_INTERVAL_MINUTES=30
 #   PI_MODEL=gemini-2.0-flash-exp
 #   PI_MODEL=anthropic/claude-3-5-sonnet-20241022
 #   PI_MODEL=openai/gpt-4o
+
+# =============================================================================
+# Rabbit R1 Gateway Configuration
+# =============================================================================
+# Enable Rabbit R1 Gateway - allows Rabbit R1 devices to connect via WebSocket
+# When enabled, generates a QR code for R1 pairing on startup
+RABBIT_GATEWAY_ENABLED=false
+
+# Gateway port (default: 18789 to match OpenClaw for compatibility)
+RABBIT_GATEWAY_PORT=18789
+
+# Authentication token for R1 connections
+# Auto-generated if not provided (recommended)
+# RABBIT_GATEWAY_TOKEN=
+
+# Auto-approve R1 devices without manual confirmation
+# WARNING: Only enable in trusted local networks
+RABBIT_AUTO_APPROVE=false
